Bug 1682877: Only send the RemotePrintJob to the parent in PrintData for SendShowPrintDialog. r=jwatt

Differential Revision: https://phabricator.services.mozilla.com/D102463